[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/InteractableManager.gd" type="Script" id=1]

[node name="InteractableManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Asteroid_Spawn_Timer" type="Timer" parent="."]
autostart = true

[node name="PowerUp_Spawn_Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="timeout" from="Asteroid_Spawn_Timer" to="." method="_on_Asteroid_Spawn_Timer_timeout"]
[connection signal="timeout" from="PowerUp_Spawn_Timer" to="." method="_on_PowerUp_Spawn_Timer_timeout"]
